# qgis-plugin-manager

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml  requirements.txt
.github/workflows/: release.yml
qgis_plugin_manager/: __about__.py  __main__.py  cli.py  definitions.py  echo.py  local_directory.py  remote.py  utils.py
requirements/: dev.txt  lint.txt  packaging.txt  tests.txt
test/: test_full_install.py  test_local.py  test_remote.py  test_utils.py
test/fixtures/: real_sources.list
test/fixtures/plugins/: sources.list
test/fixtures/plugins/plugin_a/: metadata.txt
test/fixtures/plugins/plugin_b/: metadata.txt
test/fixtures/plugins_xml/: dataplotly.xml
test/fixtures/xml_files/file_protocol/: plugin.xml
test/fixtures/xml_files/lizmap/: lizmap.xml
tests/: .gitignore  Makefile  conftest.py  pytest.ini  test_cli.py  test_full_install.py  test_local.py  test_remote.py  test_utils.py
tests/fixtures/: remote_sources.list
tests/fixtures/plugins/: ignorePlugins.list  sources.list
tests/fixtures/plugins/missing_init/: metadata.txt
tests/fixtures/plugins/plugin_b/: metadata.txt
