[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-plugin-manager"
description = "Tool for downloading/managing QGIS plugins from CLI."
requires-python = ">= 3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["QGIS"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "semver==3.0.4",
]
dynamic = ["version"]

[project.scripts]
qgis-plugin-manager = "qgis_plugin_manager.__main__:main"


[[project.authors]]
name = "Étienne Trimaille"

[[project.maintainers]]
name = "David Marteau"
email = "dmarteau@3liz.com"

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
]
tests = [
    "pytest",
]
lint = [
    "ruff",
    "mypy",
]
packaging = [
    "setuptools",
    "build",
]


[tool.setuptools.packages.find]
exclude = [ "tests/*" ]
include = [
    "qgis_plugin_manager",
    "qgis_plugin_manager.*",
]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[projects.urls]
homepage = "https://github.com/3liz/qgis-plugin-manager"
repository = "https://github.com/3liz/qgis-plugin-manager"
documentation = "https://github.com/3liz/qgis-plugin-manager/blob/master/README.md"
"Bug Reports" = "https://github.com/3liz/qgis-plugin-manager/issues/"

# Ruff configuration
# See https://doc.astral.sh/ruff/configuration

[tool.ruff]
line-length = 110
target-version = "py39"
exclude = [
    ".venv",
    ".local",
    "tests/.*",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "ANN", "W", "T", "COM", "RUF"]
# COM812 conflict with formatter
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "T201",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "ANN201",
]

[tool.ruff.lint.isort]
lines-between-types = 1
known-third-party = [
    "qgis",
]
order-by-type = true

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

#
# Mypy
#
[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
module = "qgis.*"
ignore_missing_imports = true


